Commented out useless parts in index

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<ul>
 							<li><a href="#one" class="active">About</a></li>
 							<li><a href="#two">What I Can Teach You</a></li>
-							<li><a href="#three">A Few Accomplishments</a></li>
+							<!-- <li><a href="#three">A Few Accomplishments</a></li> -->
 							<li><a href="#four">Contact</a></li>
 						</ul>
 					</nav>
@@ -87,6 +87,7 @@
 						</section>
 
 					<!-- Three -->
+					<!--
 						<section id="three">
 							<div class="container">
 								<h3>A Few Accomplishments</h3>
@@ -116,7 +117,7 @@
 								</div>
 							</div>
 						</section>
-
+					-->
 					<!-- Four -->
 						<section id="four">
 							<div class="container">
@@ -146,7 +147,7 @@
 						</section>
 
 					<!-- Five -->
-					
+					<!--
 						<section id="five">
 							<div class="container">
 								<h3>Elements</h3>
@@ -493,7 +494,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					
 
 				</div>
-
+			-->
 			<!-- Footer -->
 				<section id="footer">
 					<div class="container">
