--- a/tutorials.html
+++ b/tutorials.html
@@ -31,7 +31,7 @@
 				<section id="header" class="skel-layers-fixed">
 					<header>
 						<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
-						<h1 id="logo"><a href="#">Inanc Gurkan</a></h1>
+						<h1 id="logo"><a href="index.html">Inanc Gurkan</a></h1>
 						<p>Mac Geek, Programmer<br />
 						Love to teach...</p>
 					</header>
