--- a/python.html
+++ b/python.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Inanc Gurkan (inancg)</title>
+		<title>Python 1 @inancg</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
