Changed tutorials.html ui

--- a/tutorials.html
+++ b/tutorials.html
@@ -37,12 +37,12 @@
 					</header>
 					<nav id="nav">
 						<ul>
-							<li><a href="#one" class="active">Python Track</a></li>
-							<li><a href="#two">Natural Language Processing Track</a></li>
-							<li><a href="#three">Java Track</a></li>
-							<li><a href="#four">Database Track</a></li>
-							<li><a href="#five">Racket/Scheme Track</a></li>
-							<li><a href="#six">MacOS Track</a></li>
+							<li><a href="#two" class="active">Python Track</a></li>
+							<li><a href="#three">Natural Language Processing Track</a></li>
+							<li><a href="#four">Java Track</a></li>
+							<li><a href="#five">Database Track</a></li>
+							<li><a href="#six">Racket/Scheme Track</a></li>
+							<li><a href="#seven">MacOS Track</a></li>
 						</ul>
 					</nav>
 					<footer>
@@ -58,8 +58,9 @@
 			<!-- Main -->
 				<div id="main">
 
-					<!-- One -->
-						<section id="one">
+					<!-- Two -->
+					
+						<section id="two">
 							<div class="container">
 								<h3>Python Track</h3>
 								<p>You can choose a subject here. It will take you right to the tutorial.</p>
@@ -73,9 +74,8 @@
 								</ul>
 							</div>
 						</section>
-
-					<!-- Two -->
-						<section id="two">
+					<!-- Three -->
+						<section id="three">
 							<div class="container">
 								<h3>Natural Language Processing Track</h3>
 								<p>You can choose a subject here. It will take you right to the tutorial.</p>
@@ -91,26 +91,10 @@
 						</section>
 
 					
-					<!-- Three -->
-						<section id="three">
-							<div class="container">
-								<h3>Java Track</h3>
-								<p>You can choose a subject here. It will take you right to the tutorial.</p>
-								<ul class="feature-icons">
-									<li class="fa-code"><a href="tutorials/python.html">1-Coming Soon</a></li>
-									<li class="fa-cubes"><a href="http://google.com">2-Coming Soon</a></li>
-									<li class="fa-book"><a href="http://google.com">3-Coming Soon</a></li>
-									<li class="fa-coffee"><a href="http://google.com">4-Coming Soon</a></li>
-									<li class="fa-bolt"><a href="http://google.com">5-Coming Soon</a></li>
-									<li class="fa-users"><a href="http://google.com">6-Coming Soon</a></li>
-								</ul>
-							</div>
-						</section>
-
 					<!-- Four -->
 						<section id="four">
 							<div class="container">
-								<h3>Database Track</h3>
+								<h3>Java Track</h3>
 								<p>You can choose a subject here. It will take you right to the tutorial.</p>
 								<ul class="feature-icons">
 									<li class="fa-code"><a href="tutorials/python.html">1-Coming Soon</a></li>
@@ -126,7 +110,7 @@
 					<!-- Five -->
 						<section id="five">
 							<div class="container">
-								<h3>Racket/Scheme Track</h3>
+								<h3>Database Track</h3>
 								<p>You can choose a subject here. It will take you right to the tutorial.</p>
 								<ul class="feature-icons">
 									<li class="fa-code"><a href="tutorials/python.html">1-Coming Soon</a></li>
@@ -141,6 +125,22 @@
 
 					<!-- Six -->
 						<section id="six">
+							<div class="container">
+								<h3>Racket/Scheme Track</h3>
+								<p>You can choose a subject here. It will take you right to the tutorial.</p>
+								<ul class="feature-icons">
+									<li class="fa-code"><a href="tutorials/python.html">1-Coming Soon</a></li>
+									<li class="fa-cubes"><a href="http://google.com">2-Coming Soon</a></li>
+									<li class="fa-book"><a href="http://google.com">3-Coming Soon</a></li>
+									<li class="fa-coffee"><a href="http://google.com">4-Coming Soon</a></li>
+									<li class="fa-bolt"><a href="http://google.com">5-Coming Soon</a></li>
+									<li class="fa-users"><a href="http://google.com">6-Coming Soon</a></li>
+								</ul>
+							</div>
+						</section>
+
+					<!-- Seven -->
+						<section id="seven">
 							<div class="container">
 								<h3>MacOS Track</h3>
 								<p>You can choose a subject here. It will take you right to the tutorial.</p>
