Updated icons, removed alphabetic fonts

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 								<h3>What I Can Teach You</h3>
 								<p>Here is a list of my areas of interest. I am ambitious to drench my thirst in this subjects. Do you want to start learning about them? Just click on it!</p>
 								<ul class="feature-icons">
-									<li class="fa fa-alphaPy"><a href="tutorials.html">Python</a></li>
-									<li class="fa fa-alphaNlp"><a href="tutorials.html">Natural Language Processing</a></li>
+									<li class="fa-rocket"><a href="tutorials.html">Python</a></li>
+									<li class="fa-sort-alpha-asc"><a href="tutorials.html">Natural Language Processing</a></li>
 									<li class="fa-coffee"><a href="tutorials.html">Java</a></li>
-									<li class="fa fa-alphaSql"><a href="tutorials.html">Database</a></li>
-									<li class="fa fa-alphaRacket"><a href="tutorials.html">Racket/Scheme</a></li>
+									<li class="fa-database"><a href="tutorials.html">Database</a></li>
+									<li class="fa-bolt"><a href="tutorials.html">Racket/Scheme</a></li>
 									<li class="fa-apple"><a href="tutorials.html">MacOS Terminal</a></li>
 								</ul>
 							</div>
