--- a/tutorials.html
+++ b/tutorials.html
@@ -65,7 +65,7 @@
 								<h3>Python Track</h3>
 								<p>You can choose a subject here. It will take you right to the tutorial.</p>
 								<ul class="feature-icons">
-									<li class="fa fa-alphaPy"><a href="python01.html">1-Introduction</a></li>
+									<li class="fa-forward"><a href="python01.html">1-Introduction</a></li>
 									<li class="fa-cubes"><a href="http://google.com">2-Functions</a></li>
 									<li class="fa-book"><a href="http://google.com">3-Running .py files</a></li>
 									<li class="fa-coffee"><a href="http://google.com">4-Interact with files</a></li>
