--- a/python01.html
+++ b/python01.html
@@ -180,7 +180,7 @@ Type "help", "copyright", "credits" or "license" for more information.
 				<section id="footer">
 					<div class="container">
 						<ul class="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Inanc Gurkan (inancg). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 				</section>
