css import trial

--- a/tutorial/pytut.html
+++ b/tutorial/pytut.html
@@ -17,11 +17,11 @@
 		<script src="http://inancg.github.io/js/skel.min.js"></script>
 		<script src="http://inancg.github.io/js/skel-layers.min.js"></script>
 		<script src="http://inancg.github.io/js/init.js"></script>
-		
-			<link rel="stylesheet" href="http://inancg.github.io/css/skel.css" />
-			<link rel="stylesheet" href="http://inancg.github.io/css/style.css" />
-			<link rel="stylesheet" href="http://inancg.github.io/css/style-xlarge.css" />
-		
+		<noscript>
+			<link rel="stylesheet" type="text/css" href="./../css/skel.css" />
+			<link rel="stylesheet" type="text/css" href="./../css/style.css" />
+			<link rel="stylesheet" type="text/css" href="./../css/style-xlarge.css" />
+		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body>
