--- a/python01.html
+++ b/python01.html
@@ -201,7 +201,7 @@ Type "help", "copyright", "credits" or "license" for more information.
 		}
 
 		function ytAnswerSumStrings() {
-		    document.getElementById("ytSumStrings").innerHTML = "<strong>It works! So, you can add strings. Don't forget to add spaces!</br></strong><code>string + string = string</code>";
+		    document.getElementById("ytSumStrings").innerHTML = "<strong>It works! So, you can add strings.</br></strong><code>string + string = string</code>";
 		}
 
 		</script>
